refactor frontends to use abstract frontend class