@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id "com.github.sherter.google-java-format" version "0.8"
 }
 
 repositories {
@@ -15,6 +14,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 mainClassName = 'micmacmoe.App'
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+run {
+    jvmArgs(['--enable-preview'])
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
 
 run {
     standardInput = System.in
